refactor: QuestionProcessingService 카이젠
메서드명, 로직의 흐름 변경