@@ -5,7 +5,6 @@ import static mju.iphak.maru_egg.common.exception.ErrorCode.*;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -37,12 +36,11 @@ import mju.iphak.maru_egg.question.utils.PhraseExtractionUtils;
 public class QuestionProcessingService {
 
 	private static final double STANDARD_SIMILARITY = 0.95;
-	private static final String UNCLASSIFIED = "";
 	private static final String INVALID_ANSWER = "해당 내용에 대한 정보는 존재하지 않습니다. 정확한 내용은 입학지원팀에 문의해주세요.";
 
 	private final QuestionRepository questionRepository;
-	private final AnswerService answerService;
 	private final AnswerReferenceRepository answerReferenceRepository;
+	private final AnswerService answerService;
 
 	public QuestionResponse question(final QuestionType type, final QuestionCategory category, final String content) {
 		String contentToken = PhraseExtractionUtils.extractPhrases(content);
@@ -50,10 +48,10 @@ public class QuestionProcessingService {
 
 		if (questionCores.isEmpty()) {
 			log.info("저장된 질문이 없어 새롭게 LLM서버에 질문을 요청합니다.");
-			return askNewQuestion(type, category, content, contentToken);
+			return processNewQuestion(type, category, content, contentToken);
 		}
 
-		Long mostSimilarQuestionId = getMostSimilarQuestionId(questionCores, contentToken);
+		Long mostSimilarQuestionId = findMostSimilarQuestionId(questionCores, contentToken);
 
 		if (mostSimilarQuestionId != null) {
 			log.info("유사한 질문이 있어 DB에서 질문을 재사용합니다.");
@@ -61,115 +59,84 @@ public class QuestionProcessingService {
 		}
 
 		log.info("유사한 질문이 없어 새롭게 LLM서버에 질문을 요청합니다.");
-		return askNewQuestion(type, category, content, contentToken);
+		return processNewQuestion(type, category, content, contentToken);
 	}
 
-	private QuestionResponse askNewQuestion(QuestionType type, QuestionCategory category, String content,
+	private QuestionResponse processNewQuestion(QuestionType type, QuestionCategory category, String content,
 		String contentToken) {
-		LLMAskQuestionRequest askQuestionRequest = LLMAskQuestionRequest.of(type.getType(),
-			isCategoryNullThen(category),
-			content);
+		LLMAskQuestionRequest askQuestionRequest = LLMAskQuestionRequest.of(
+			type.getType(),
+			category == null ? "" : category.getCategory(),
+			content
+		);
 
 		LLMAnswerResponse llmAnswerResponse = answerService.askQuestion(askQuestionRequest).block();
 
-		return getQuestionResponse(type, content, contentToken, llmAnswerResponse);
-	}
-
-	private QuestionResponse getQuestionResponse(final QuestionType type, final String content,
-		final String contentToken, final LLMAnswerResponse llmAnswerResponse) {
-		if (isCorrectAnswer(llmAnswerResponse)) {
-			Question newQuestion = saveQuestion(type,
-				QuestionCategory.convertToCategory(llmAnswerResponse.questionCategory()), content, contentToken);
-			Answer newAnswer = saveAnswer(newQuestion, llmAnswerResponse.answer());
-			saveAnswerReference(newAnswer, llmAnswerResponse.references());
-			return createQuestionResponse(newQuestion, newAnswer, llmAnswerResponse.references());
+		if (!isValidAnswer(llmAnswerResponse)) {
+			return QuestionResponse.valueOfInvalidQuestion(content);
 		}
-		return QuestionResponse.valueOfInvalidQuestion(content);
+
+		Question newQuestion = saveQuestion(type,
+			QuestionCategory.convertToCategory(llmAnswerResponse.questionCategory()), content, contentToken);
+		Answer newAnswer = saveAnswer(newQuestion, llmAnswerResponse.answer());
+		saveAnswerReferences(newAnswer, llmAnswerResponse.references());
+
+		return createQuestionResponse(newQuestion, newAnswer, llmAnswerResponse.references());
 	}
 
-	private static boolean isCorrectAnswer(final LLMAnswerResponse llmAnswerResponse) {
+	private boolean isValidAnswer(LLMAnswerResponse llmAnswerResponse) {
 		return !llmAnswerResponse.answer().equals(INVALID_ANSWER);
 	}
 
-	private void saveAnswerReference(final Answer answer,
-		List<AnswerReferenceResponse> referenceResponses) {
+	private void saveAnswerReferences(Answer answer, List<AnswerReferenceResponse> referenceResponses) {
 		List<AnswerReference> answerReferences = referenceResponses.stream()
-			.map((reference) -> AnswerReference.of(reference.title(), reference.link(), answer))
+			.map(reference -> AnswerReference.of(reference.title(), reference.link(), answer))
 			.toList();
 		answerReferenceRepository.saveAll(answerReferences);
 	}
 
-	private static String isCategoryNullThen(final QuestionCategory category) {
-		if (category == null) {
-			return UNCLASSIFIED;
-		}
-		return category.getCategory();
-	}
-
-	private Answer saveAnswer(final Question question, final String content) {
+	private Answer saveAnswer(Question question, String content) {
 		Answer newAnswer = Answer.of(question, content);
 		return answerService.saveAnswer(newAnswer);
 	}
 
-	private Question saveQuestion(final QuestionType type, final QuestionCategory category, final String content,
-		final String contentToken) {
+	private Question saveQuestion(QuestionType type, QuestionCategory category, String content, String contentToken) {
 		Question question = Question.of(content, contentToken, type, category);
 		return questionRepository.save(question);
 	}
 
-	private QuestionResponse createQuestionResponse(final Question question, final Answer answer,
-		final List<AnswerReferenceResponse> answerReferenceResponses) {
-		AnswerResponse answerResponse = AnswerResponse.from(answer);
-		return QuestionResponse.of(question, answerResponse, answerReferenceResponses);
+	private Long findMostSimilarQuestionId(List<QuestionCore> questionCores, String contentToken) {
+		Map<CharSequence, Integer> tfIdf1 = computeTfIdf(questionCores, contentToken);
+
+		return questionCores.stream()
+			.map(core -> {
+				Map<CharSequence, Integer> tfIdf2 = computeTfIdf(questionCores, core.contentToken());
+				double similarity = TextSimilarityUtils.computeCosineSimilarity(tfIdf1, tfIdf2);
+				return similarity > STANDARD_SIMILARITY ? core.id() : null;
+			})
+			.filter(id -> id != null)
+			.findFirst()
+			.orElse(null);
 	}
 
-	private Question getQuestionById(final Long questionId) {
-		return questionRepository.findById(questionId)
-			.orElseThrow(() -> new EntityNotFoundException(
-				String.format(NOT_FOUND_QUESTION_BY_ID.getMessage(), questionId)));
-	}
-
-	private Long getMostSimilarQuestionId(final List<QuestionCore> questionCores, final String contentToken) {
-		double maxSimilarity = -1;
-		Long mostSimilarContentId = null;
+	private Map<CharSequence, Integer> computeTfIdf(List<QuestionCore> questionCores, String contentToken) {
 		List<String> contentTokens = questionCores.stream()
 			.map(QuestionCore::contentToken)
-			.collect(Collectors.toList());
-		Map<CharSequence, Integer> tfIdf1 = computeTfIdf(contentTokens, contentToken);
+			.toList();
 
-		for (QuestionCore questionCore : questionCores) {
-			Map<CharSequence, Integer> tfIdf2 = computeTfIdf(contentTokens, questionCore.contentToken());
-
-			double similarity = TextSimilarityUtils.computeCosineSimilarity(tfIdf1, tfIdf2);
-
-			if (similarity > maxSimilarity) {
-				maxSimilarity = similarity;
-				mostSimilarContentId = questionCore.id();
-			}
-		}
-		if (maxSimilarity > STANDARD_SIMILARITY) {
-			return mostSimilarContentId;
-		}
-		return null;
-	}
-
-	private Map<CharSequence, Integer> computeTfIdf(List<String> contentTokens, String contentToken) {
 		try {
 			return TextSimilarityUtils.computeTfIdf(contentTokens, contentToken);
 		} catch (Exception e) {
-			throw new RuntimeException(
-				String.format(INTERNAL_ERROR_SIMILARITY.getMessage(), contentToken, contentToken));
+			throw new RuntimeException(String.format(INTERNAL_ERROR_TEXT_SIMILARITY.getMessage()));
 		}
 	}
 
-	private List<QuestionCore> getQuestionCores(final QuestionType type, final QuestionCategory category,
-		final String contentToken) {
-		if (category == null) {
-			return questionRepository.searchQuestionsByContentTokenAndType(contentToken, type)
+	private List<QuestionCore> getQuestionCores(QuestionType type, QuestionCategory category, String contentToken) {
+		return category == null ?
+			questionRepository.searchQuestionsByContentTokenAndType(contentToken, type)
+				.orElse(Collections.emptyList()) :
+			questionRepository.searchQuestionsByContentTokenAndTypeAndCategory(contentToken, type, category)
 				.orElse(Collections.emptyList());
-		}
-		return questionRepository.searchQuestionsByContentTokenAndTypeAndCategory(contentToken, type, category)
-			.orElse(Collections.emptyList());
 	}
 
 	private QuestionResponse getExistingQuestionResponse(Long questionId) {
@@ -177,8 +144,20 @@ public class QuestionProcessingService {
 		question.incrementViewCount();
 		Answer answer = answerService.getAnswerByQuestionId(question.getId());
 		List<AnswerReferenceResponse> answerReferenceResponses = answer.getReferences().stream()
-			.map((answerReference) -> AnswerReferenceResponse.of(answerReference.getTitle(), answerReference.getLink()))
+			.map(reference -> AnswerReferenceResponse.of(reference.getTitle(), reference.getLink()))
 			.toList();
 		return createQuestionResponse(question, answer, answerReferenceResponses);
+	}
+
+	private Question getQuestionById(Long questionId) {
+		return questionRepository.findById(questionId)
+			.orElseThrow(() -> new EntityNotFoundException(
+				String.format(NOT_FOUND_QUESTION_BY_ID.getMessage(), questionId)));
+	}
+
+	private QuestionResponse createQuestionResponse(Question question, Answer answer,
+		List<AnswerReferenceResponse> answerReferenceResponses) {
+		AnswerResponse answerResponse = AnswerResponse.from(answer);
+		return QuestionResponse.of(question, answerResponse, answerReferenceResponses);
 	}
 }
